--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "security:audit": "npm audit",
     "security:fix": "npm audit fix",
     "security:fix-force": "npm audit fix --force",
-    "security:check": "npm audit && npm outdated"
+    "security:check": "npm audit && npm outdated",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d typeorm.config.ts",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "migration:create": "npm run typeorm -- migration:create"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.3",
@@ -36,15 +41,18 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "http-status-codes": "^2.3.0",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.2",
     "swagger-ui-express": "^5.0.1",
+    "typeorm": "^0.3.24",
     "uuid": "^11.1.0",
     "yaml": "^2.8.0"
   },
