--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.24",
     "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "yaml": "^2.8.0"
   },
   "devDependencies": {
