--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./src:/app/src
       - ./node_modules:/app/node_modules
+      - ./logs:/app/logs
     environment:
       - NODE_ENV=${NODE_ENV}
       - PORT=${PORT}
@@ -16,6 +17,11 @@ services:
     networks:
       - app-network
     restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "20m"
+        max-file: "14"
 
   postgres:
     image: postgres:15-alpine
